--- a/DeviceAdapters/configure.ac
+++ b/DeviceAdapters/configure.ac
@@ -76,7 +76,7 @@ m4_define([device_adapter_dirs], [m4_strip([
   mmCoreAndDevices/MMDevice
   mmCoreAndDevices/MMDevice/unittest
   ArdIllu
-  ArduControl
+  OpenLightControl
 ])])
 
 AC_CONFIG_FILES(Makefile m4_map_args_w(device_adapter_dirs, [], [/Makefile], [ ]))
